# Zero-Padding-Kernel

./: .gitignore  LICENSE  Makefile  README.md
include/: pixelsum.h  pixelsumcuda.h  readimage.h
src/: main.cpp  pixelsum.cpp  readimage.cpp
test/: CMakeLists.txt  pixelsumtest.cpp
